# ant_bot

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
ant_bot/: ant_navigator.py  gait_controller.py
config/: controllers.yaml
launch/: display.launch.py
meshes/: hexa_base.STL  leg_base.STL  leg_coxa.STL  leg_femur.STL  leg_tibia.STL
urdf/: hexapod.xacro  hexapod_core.xacro  hexapod_gazebo.xacro
worlds/: empty.world
